Capítulo 7 Faça sua aplicação falar várias línguas

--- a/colchonet/app/views/layouts/application.html.erb
+++ b/colchonet/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
       <h1><%= link_to "colcho.net", root_path %></h1>
       <nav>
         <ul>
-          <li><%= link_to 'Quartos', rooms_path %></li>
-          <li><%= link_to 'Cadastros', new_user_path %></li>
+          <li><%= link_to t('layout.rooms'), rooms_path %> </li>
+          <li><%= link_to t('layout.signup'), new_user_path %> </li>
         </ul>
       </nav>
     </div>
