--- a/colchonet/app/views/rooms/_form.html.erb
+++ b/colchonet/app/views/rooms/_form.html.erb
@@ -1,6 +1,6 @@
 <% if @room.errors.any? %>
   <div id="error_explanation">
-    Há erros no formulário, por favor verifique.
+  <%= t 'general.form_error' %>
   </div>
 <% end %>
 <%= form_for(@room) do |f| %>
