--- a/colchonet/app/views/rooms/new.html.erb
+++ b/colchonet/app/views/rooms/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Room</h1>
+<h1> <%= t('rooms.new.title') %>  </h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', rooms_path %>
+<%= link_to t('links.back'), rooms_path %>
