--- a/colchonet/app/views/users/new.html.erb
+++ b/colchonet/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Cadastro </h1>
+<h1> <%= t('users.new.title') %> </h1>
 <%=  render 'form' %>
-<%= link_to 'Voltar', root_path %>
+<%= link_to t('links.back'), root_path %>
 
