capítulo 10 controle de acesso

--- a/colchonet/app/assets/stylesheets/default.css.scss
+++ b/colchonet/app/assets/stylesheets/default.css.scss
@@ -1,3 +1,5 @@
+@import	"shadow";
+
 $header-height: 55px;
 $content-width: 700px;
 $serif-families: "Pacifico", "Georgia", serif;
@@ -12,11 +14,6 @@ $success-text-color: #468847;
 
 body { background-color: #f5f5f5; }
 
-@mixin shadow ($color, $x, $y, $radius) {
-  -moz-box-shadow: $color $x $y $radius;
-  -web-kit-shadow: $color $x $y $radius;
-  box-shadow: $color $x $y $radius;
-}
 
 header {
   @include shadow(#ccc, 0, 3px, 6px);
