--- a/colchonet/app/views/rooms/index.html.erb
+++ b/colchonet/app/views/rooms/index.html.erb
@@ -1,31 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Rooms</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Location</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rooms.each do |room| %>
-      <tr>
-        <td><%= room.title %></td>
-        <td><%= room.location %></td>
-        <td><%= room.description %></td>
-        <td><%= link_to 'Show', room %></td>
-        <td><%= link_to 'Edit', edit_room_path(room) %></td>
-        <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Room', new_room_path %>
+<h1><%=	t	'.title'	%></h1>
+<%	@rooms.each	do	|room|	%>
+	<%=	render room	%>
+<%end	%>
